# template_code

./: .gitmodules
competitive_programming/: .gitignore  CreateTestPy.py  RunCppTest.py  hello.py  pycpptest.py  pyproject.toml  run.cpp  test_run.py
competitive_programming/src/pycpptest/: __init__.py  pycpptest.py
competitive_programming/test/: test_run.py
cp_template/: cp_start_template.cpp
