[project]
name = "PyCppTest"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pycpptest = "pycpptest:pycpptest_init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
